<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/sv1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:src="@drawable/img_icon_big" />

            <TextView
                android:id="@+id/textView1"
                style="@style/Style_TextWithoutShadow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:padding="20dp" >

            <Button
                android:id="@+id/btn_thebest"
                style="@style/Style_TextWithShadow"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@color/btn_blue_selector"
                android:drawableLeft="@drawable/img_thebest"
                android:text="@string/btn_title_the_best" />

            <Button
                android:id="@+id/btn_last"
                style="@style/Style_TextWithShadow"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@color/btn_blue_selector"
                android:drawableLeft="@drawable/img_new"
                android:text="@string/btn_title_news" />

            <Button
                android:id="@+id/button_favorite"
                style="@style/Style_TextWithShadow"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@color/btn_blue_selector"
                android:drawableLeft="@drawable/img_favorite"
                android:text="@string/favorites" />

            <Button
                android:id="@+id/btn_random"
                style="@style/Style_TextWithShadow"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:background="@color/btn_blue_selector"
                android:drawableLeft="@drawable/img_random"
                android:text="@string/randomObjects" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>