<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/btn_update"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@color/btn_blue_selector"
            android:drawableLeft="@drawable/img_download"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_add_wish"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@color/btn_blue_selector"
            android:drawableLeft="@drawable/img_add"
            android:tag="http://kawaly.tja.pl/dodaj.html"
            android:text="@string/btn_footer_add_wishes" />

        <Button
            android:id="@+id/btn_web"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@color/btn_blue_selector"
            android:drawableLeft="@drawable/img_site"
            android:tag="http://www.kawaly.tja.pl"
            android:text="www.kawaly.tja.pl" />

        <Button
            android:id="@+id/btn_facebook"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@color/btn_blue_selector"
            android:drawableLeft="@drawable/img_facebook"
            android:tag="http://www.facebook.com/KawalyTjaPl"
            android:text="Facebook" />

        <Button
            android:id="@+id/btn_about"
            style="@style/Style_TextWithShadow"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:background="@color/btn_blue_selector"
            android:drawableLeft="@drawable/img_about"
            android:text="@string/aboutApp" />

    </LinearLayout>

</RelativeLayout>